--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   app:
-    container_name: ngps-portal
+    container_name: openvagas-portal
     build:
       context: .
       dockerfile: Dockerfile
