--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ngps-portal",
+  "name": "openvagas-portal",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -15,7 +15,7 @@
     "axios": "^0.27.2",
     "dotenv": "^16.0.3",
     "jsonwebtoken": "^9.0.0",
-    "next": "^12.1.6",
+    "next": "^12.3.4",
     "next-auth": "^4.18.7",
     "query": "github:tanstack/react-query",
     "react": "^18.2.0",
